Fixed name input box alignment.

--- a/client/static/css/common.css
+++ b/client/static/css/common.css
@@ -17,15 +17,12 @@ body {
                                   not supported by any browser */
 }
 
-#welcomeSpace {
-  text-align: left;
-}
-
 #definition {
   position: absolute;
   top: 230px;
   left: 0px;
   font-size: 30px;
+  text-align: left;
 }
 
 .wrapper {
